Hold the published modules to the NoReflection check of errorprone-no-reflection
The check that kept reflection out of the interception lived in this repository as
reflection-errorprone. It is published now, by micronaut-projects/errorprone-no-reflection,
together with a Gradle plugin that adds it to ErrorProne. The module convention applies
that plugin at 1.0.1, which checks the main sources of the two published modules as the
local check did and leaves the tests free to reflect, and reflection-errorprone is gone.
The check runs in the ErrorProne the catalog names, the one NullAway runs in.

The published check reports more than the local one did. The runtime already avoided all
of it. The processor did not: an EnumMap takes the constants of its enum reflectively, and
it kept the interceptor methods of a class in three of them. They are plain maps now, and
InterceptorClassModel orders the kinds by InterceptionKind.values(), so the members of
@JakartaInterceptorMethods it writes out stay in the order an EnumMap gave them.

Micronaut Core 5.2.0 is released, so the build uses it rather than the snapshot, and the
snapshot repository and the zero-second cache of changing modules go with it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>